ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Affected_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Affected_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Equipment</label>
    <referenceTo>Affected_Equipment__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>