ConnexoProject/force-app/main/default/objects/Equipment__c/fields/CMPL123_Last_Workflow_State_Transitioned__c.field-meta.xml
<CustomField>
    <fullName>CMPL123_Last_Workflow_State_Transitioned__c</fullName>
    <label>Last Workflow State Transitioned On</label>
    <type>DateTime</type>
</CustomField>