ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Equipmen_Status__c.field-meta.xml
<CustomField>
    <fullName>Equipmen_Status__c</fullName>
    <label>Equipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>GxP use</fullName>
            </value>
            <value>
                <fullName>Non-GxP use</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>