ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <label>Equipment Name</label>
    <type>TextArea</type>
</CustomField>