ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerosol Generator</fullName>
            </value>
            <value>
                <fullName>Air Sampler</fullName>
            </value>
            <value>
                <fullName>Auto Droplet Generator</fullName>
            </value>
            <value>
                <fullName>Autoclave</fullName>
            </value>
            <value>
                <fullName>Balance/Scale</fullName>
            </value>
            <value>
                <fullName>Bead Bath</fullName>
            </value>
            <value>
                <fullName>Bioanalyzer</fullName>
            </value>
            <value>
                <fullName>Bioreactor</fullName>
            </value>
            <value>
                <fullName>Biosealer</fullName>
            </value>
            <value>
                <fullName>Biowelder</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>Centrifuge</fullName>
            </value>
            <value>
                <fullName>CO2 Incubator</fullName>
            </value>
            <value>
                <fullName>Data Logger</fullName>
            </value>
            <value>
                <fullName>Density Meter</fullName>
            </value>
            <value>
                <fullName>DI Water Station</fullName>
            </value>
            <value>
                <fullName>Droplet Reader</fullName>
            </value>
            <value>
                <fullName>Dry Bath</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Gas Manifold</fullName>
            </value>
            <value>
                <fullName>Gauge</fullName>
            </value>
            <value>
                <fullName>Hot Block</fullName>
            </value>
            <value>
                <fullName>Hot/Stir Plate</fullName>
            </value>
            <value>
                <fullName>Imaging System</fullName>
            </value>
            <value>
                <fullName>Inspection Booth</fullName>
            </value>
            <value>
                <fullName>Lev Mixer</fullName>
            </value>
            <value>
                <fullName>Mag Mixer</fullName>
            </value>
            <value>
                <fullName>Media Warmer</fullName>
            </value>
            <value>
                <fullName>Microcentrifuge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>