ConnexoProject/force-app/main/default/objects/Equipment__c/fields/EVP__c.field-meta.xml
<CustomField>
    <fullName>EVP__c</fullName>
    <label>EVP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>