ConnexoProject/force-app/main/default/objects/Equipment__c/fields/EVP_Approval__c.field-meta.xml
<CustomField>
    <fullName>EVP_Approval__c</fullName>
    <label>EVP Approval</label>
    <type>Date</type>
</CustomField>