ConnexoProject/force-app/main/default/objects/Equipment__c/fields/EVP_ID__c.field-meta.xml
<CustomField>
    <fullName>EVP_ID__c</fullName>
    <label>EVP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>