ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Next_PR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_PR_Due_Date__c</fullName>
    <description>f VPR Approval has a date then Next PR Due Date = VPR Approval + Periodic Review Cycle (months)

 

If VPR Approval is blank/null, then Next PR Due Date = EVP Approval + Periodic Review Cycle (months)</description>
    <formula>IF(
    NOT(ISBLANK(VPR_Approval__c)),
    ADDMONTHS(VPR_Approval__c, Periodic_Review_Cycle_months__c),
    IF(
        NOT(ISBLANK(EVP_Approval__c)),
        ADDMONTHS(EVP_Approval__c, Periodic_Review_Cycle_months__c),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next PR Due Date</label>
    <type>Date</type>
</CustomField>