ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observation</label>
    <referenceTo>Observation__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>