ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Periodic_Review_Cycle_months__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Review_Cycle_months__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Periodic Review Cycle (months)</description>
    <label>Periodic Review Cycle (24 months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>