ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Related_EQ_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_EQ_ID__c</fullName>
    <label>Related EQ ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>