ConnexoProject/force-app/main/default/objects/Equipment__c/fields/Schneider_Point_Name__c.field-meta.xml
<CustomField>
    <fullName>Schneider_Point_Name__c</fullName>
    <label>Schneider Point Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>