ConnexoProject/force-app/main/default/objects/Equipment__c/fields/VPR_Approval__c.field-meta.xml
<CustomField>
    <fullName>VPR_Approval__c</fullName>
    <label>VPR  Approval</label>
    <type>Date</type>
</CustomField>