ConnexoProject/force-app/main/default/objects/Equipment__c/fields/VPR_ID__c.field-meta.xml
<CustomField>
    <fullName>VPR_ID__c</fullName>
    <label>VPR ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>