ConnexoProject/force-app/main/default/objects/Equipment__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Equipment Record Type</description>
    <label>Equipment</label>
</RecordType>